--- a/roles/sap_hana_backint/defaults/main.yml
+++ b/roles/sap_hana_backint/defaults/main.yml
@@ -6,7 +6,7 @@
 # Sets the action to perform with this Ansible Role.
 # Options:
 # - setup - Installs and configures the SAP HANA Backint agent.
-# - backup - Performs a backup operation using the configured Backint agent.
+# - backup - Triggers a backup operation using the configured Backint agent.
 # - clean - Executes cleanup operation using hanacleaner.py.
 sap_hana_backint_action: ''
 
