--- a/roles/sap_firewall/handlers/main.yml
+++ b/roles/sap_firewall/handlers/main.yml
@@ -6,3 +6,4 @@
   ansible.builtin.command:
     cmd: firewall-cmd --reload
   when: sap_firewall_end_status == 'enabled' | d('enabled')
+  changed_when: true
