--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ exclude: '^$'
 fail_fast: true
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.3.0
     hooks:
       - id: end-of-file-fixer
       - id: check-merge-conflict
@@ -14,24 +14,26 @@ repos:
       - id: check-executables-have-shebangs
         name: "Executable text files have shebangs"
       - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
+        files: .*\.(xml|yaml|yml|md|adoc)$
       - id: check-xml
       - id: check-yaml
         args:
           - "-m"
-#  - repo: https://github.com/adrienverge/yamllint.git
-#    rev: v1.26.3
-#    hooks:
-#    - id: yamllint
-#      exclude: >
-#        (?x)^(
-#          examples/playbooks/templates/.*|
-#          examples/other/some.j2.yaml
-#        )$
-#      files: \.(yaml|yml)$
-#      types: [file, yaml]
-#      entry: yamllint --strict
+            #  - repo: https://github.com/adrienverge/yamllint.git
+            #    rev: v1.26.3
+            #    hooks:
+            #    - id: yamllint
+            #      exclude: >
+            #        (?x)^(
+            #          examples/playbooks/templates/.*|
+            #          examples/other/some.j2.yaml
+            #        )$
+            #      files: \.(yaml|yml)$
+            #      types: [file, yaml]
+            #      entry: yamllint --strict
   - repo: https://github.com/ansible-community/ansible-lint.git
-    rev: v5.3.1  # put latest release tag from https://github.com/ansible-community/ansible-lint/releases/
+    rev: v6.22.1  # put latest release tag from https://github.com/ansible-community/ansible-lint/releases/
     hooks:
       - id: ansible-lint
         files: \.(yaml|yml)$
