--- a/roles/sap_firewall/tasks/configure_preset.yml
+++ b/roles/sap_firewall/tasks/configure_preset.yml
@@ -69,10 +69,13 @@
       register: __sap_firewall_register_copy_service
       changed_when: __sap_firewall_register_copy_service.changed
 
-    - name: SAP Firewall - Reload firewalld after applying new service file - {{ __sap_firewall_preset.preset }}
+    # Handler cannot be used here, because reload has to be done now, not at end of role execution.
+    # Configuration step will fail if firewalld is not aware of new service file.
+    - name: SAP Firewall - Reload firewalld after applying new service file - {{ __sap_firewall_preset.preset }}  # noqa no-handler
       ansible.builtin.command:
         cmd: firewall-cmd --reload
       when: __sap_firewall_register_copy_service.changed
+      changed_when: true
 
     - name: SAP Firewall - Remove temporary service file - {{ __sap_firewall_preset.preset }}
       ansible.builtin.file:
