--- a/roles/sap_hana_backint/tasks/backup/backup_tenant.yml
+++ b/roles/sap_hana_backint/tasks/backup/backup_tenant.yml
@@ -13,6 +13,7 @@
   become: true
   become_user: "{{ __sap_hana_backint_sidadm_user }}"
   register: __sap_hana_backint_register_tenant_backup
+  changed_when: true
 
 - name: SAP HANA Backint - Backup - Fail if Tenant backup command failed
   ansible.builtin.fail:
