--- a/roles/sap_hana_backint/tasks/clean/clean_tenant.yml
+++ b/roles/sap_hana_backint/tasks/clean/clean_tenant.yml
@@ -15,6 +15,7 @@
   become: true
   become_user: "{{ __sap_hana_backint_sidadm_user }}"
   register: __sap_hana_backint_register_tenant_clean
+  changed_when: true
 
 - name: SAP HANA Backint - Clean - Fail if Tenant cleanup script failed
   ansible.builtin.fail:
