--- a/roles/sap_hana_backint/tasks/setup/platform_aws_s3.yml
+++ b/roles/sap_hana_backint/tasks/setup/platform_aws_s3.yml
@@ -77,6 +77,7 @@
         cmd: "{{ sap_hana_backint_aws_s3_definition['python_path'] }} -c \"import zstandard; print('zstandard is installed')\""
       register: __sap_hana_backint_register_zstd_check
       ignore_errors: true
+      changed_when: false
 
     - name: SAP HANA Backint - Setup - AWS S3 - Fail if zstandard Python library is not installed
       ansible.builtin.fail:
@@ -191,7 +192,7 @@
 
 - name: Block to catch wrong python version errors
   block:
-    - name: SAP HANA Backint - Setup - AWS S3 - Execute script create_hdbbackint.py
+    - name: SAP HANA Backint - Setup - AWS S3 - Execute script create_hdbbackint.py  # noqa command-instead-of-shell
       ansible.builtin.shell:
         cmd: "{{ sap_hana_backint_aws_s3_definition['python_path'] }} create_hdbbackint.py"
       args:
@@ -201,6 +202,7 @@
       environment:
         PYTHONPATH: ""
         PYTHONHOME: ""
+      changed_when: true
 
   rescue:
     - name: SAP HANA Backint - Setup - AWS S3 - Fail due to Python version error
