--- a/galaxy.yml
+++ b/galaxy.yml
@@ -10,7 +10,7 @@ namespace: community
 name: sap_operations
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 0.9.1
+version: 2.0.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -20,30 +20,35 @@ authors:
   - IBM Lab for SAP Solutions
   - IBM Cloud for SAP
   - IBM Consulting for SAP
+  - Sean Freeman <sean.freeman(at)uk.ibm.com>
+  - Rainer Leber <rainer.leber(at)sva.de>
+  - Marcel Mamula <marcel.mamula(at)suse.com>
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
-description: Collection of Ansible Modules and Ansible Roles for SAP system operations
+description: Collection of Ansible Roles and Modules for SAP system operations
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
-license:
-  - Apache-2.0
+# license:
+#   - Apache-2.0
 
 # The path to the license file for the collection. This path is relative to the root of the collection. This key is
 # mutually exclusive with 'license'
-license_file: ''
+license_file: 'LICENSE'
 
 # A list of tags you want to associate with the collection for indexing/searching. A tag name has the same character
 # requirements as 'namespace' and 'name'
-tags: []
+tags:
+  - database
+  - application
+  - sap
 
 # Collections that this collection requires to be installed for it to be usable. The key of the dict is the
 # collection label 'namespace.name'. The value is a version range
 # L(specifiers,https://python-semanticversion.readthedocs.io/en/latest/#requirement-specification). Multiple version
 # range specifiers can be set and are separated by ','
-dependencies:
-  community.sap_libs: '*'
+dependencies: {}
 
 # The URL of the originating SCM repository
 repository: https://github.com/sap-linuxlab/community.sap_operations
