--- a/roles/sap_control/tasks/actions/async_monitor.yml
+++ b/roles/sap_control/tasks/actions/async_monitor.yml
@@ -5,7 +5,7 @@
   when:
     - sap_control_function is match('restart|update')
   block:
-    - name: SAP Control - Get initial system state for instance - {{ command_item['nr'] }}  # noqa no-changed-when
+    - name: SAP Control - Get initial system state for instance - {{ command_item['nr'] }}
       ansible.builtin.shell:
         cmd: >-
           source ~/.profile &&
